--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,8 @@ html, body, p, h1, h2, h3, a, img, form, table, tr, td {
 .msber-box01 .msber-box01-drop ul li{position:relative;padding:2px 0 10px 35px}
 .msber-box01 .msber-box01-drop ul li p{padding-top:0}
 
-.msber-box02{width:460px;margin:0 auto;padding:0 480px 70px 0;position:relative;height:480px}
-.msber-box02-img01{display:block}
-.msber-box02-img02{display:none}
-.msber-box02-img03{display:none}
+.msber-box02{width:460px;margin:0 auto;padding:0 480px 90px 0;position:relative;}
+.msber-box02-img{display:none}
 
 .msber-box02 .msber-box02-right{position:absolute;top:0;right:20px}
 .msber-box02 .msber-box02-left .title{text-align:left;padding:0 0 20px 0}
@@ -86,7 +84,13 @@ html, body, p, h1, h2, h3, a, img, form, table, tr, td {
 .msber-box02 ul li.first span{background-position: 0 0}
 .msber-box02 ul li.second span{background-position: 0 -23px}
 .msber-box02 ul li.third span{background-position: 0 -46px}
+.msber-box02 .msber-box02-left .msber-box02-drop ul li.first span{background-position: -23px 0}
+.msber-box02 .msber-box02-left .msber-box02-drop ul li.second span{background-position: -23px -23px}
+.msber-box02 .msber-box02-left .msber-box02-drop ul li.third span{background-position: -23px -46px}
 
+.msber-box02-drop{display:none}
+.msber-box02 .msber-box02-drop ul li{position:relative;padding:2px 0 10px 35px}
+.msber-box02 .msber-box02-drop ul li p{padding-top:0}
 
 .msber-box03{width:460px;margin:0 auto;padding:0 0 70px 480px;position:relative}
 .msber-box03-img01{display:block}
@@ -125,6 +129,31 @@ html, body, p, h1, h2, h3, a, img, form, table, tr, td {
 .msber-box04 ul li.first span{background-position: 0 0}
 .msber-box04 ul li.second span{background-position: 0 -23px}
 .msber-box04 ul li.third span{background-position: 0 -46px}
+
+/* Slider */
+div.anythingSlider {width: 446px;height: 415px;margin: 0 auto;}
+div.anythingSlider .anythingWindow {overflow: hidden;	position: relative;	width: 100%;	height: 100%;}
+div.anythingSlider {position: relative;padding:0;}
+ul.anythingBase {background: transparent;	list-style: none;	position: absolute;	top: 0;	left: 0;	margin: 0;	padding: 0;}
+ul.anythingBase li.panel {	background: transparent;	display: block;	float: left;	padding: 0;	margin: 0;}
+div.anythingSlider .arrow {top: 50%;position: absolute;display: block;}
+div.anythingSlider .anythingControls {outline: 0;background:url(../images/tabs_bg.png) no-repeat;width:376px;height:30px;margin:20px auto 0 auto;
+	border-radius: 14px;
+	-moz-border-radius:  14px;
+	-webkit-border-radius:  14px;
+}
+div.anythingSlider .anythingControls .start-stop{display:none}
+div.anythingSlider .thumbNav { margin: 0;padding:0}
+div.anythingSlider .thumbNav li { display: inline;padding:0}
+div.anythingSlider .thumbNav a {font-size:14px;display: inline-block;text-decoration: none;height:30px;text-align: center;outline: 0;line-height:30px;padding:0 15px;
+	border-radius: 14px;
+	-moz-border-radius:  14px;
+	-webkit-border-radius:  14px;
+}
+div.anythingSlider .thumbNav a.cur{background:url(../images/tabs_act.png) repeat-x;color:#fff}
+div.anythingSlider .thumbNav a.cur{background:url(../images/tabs_act.png) repeat-x;color:#fff}
+div.anythingSlider .thumbNav .first a{padding:0 19px 0 20px}
+
 
 
 
